--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,5 +5,6 @@
     <color name="purple_200">#FFBB86FC</color>
     <color name="rojo">#DC2C2C</color>
     <color name="verde">#2DBF33</color>
+    <color name="amarillo">#FFC107</color>
 
 </resources>
