--- a/app/src/main/res/layout/fragment_segundo.xml
+++ b/app/src/main/res/layout/fragment_segundo.xml
@@ -10,13 +10,12 @@
     <Button
         android:id="@+id/btnFragmentClick2"
         android:layout_width="wrap_content"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
         android:layout_height="wrap_content"
-        android:text="CLICK"
-        />
+        android:text="IR AL TERCER FRAGMENT"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 
 
@@ -24,6 +23,10 @@
         android:id="@+id/animationView2"
         android:layout_width="100dp"
         android:layout_height="100dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="@id/textView"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:lottie_rawRes="@raw/botonanimado"
         app:lottie_autoPlay="true"
         app:lottie_loop="true"/>
