--- a/app/src/main/res/navigation/grafo_principal.xml
+++ b/app/src/main/res/navigation/grafo_principal.xml
@@ -43,5 +43,11 @@
             android:name="provincia"
             app:argType="string"
             app:nullable="true" />
+        <action
+            android:id="@+id/action_tercerFragment_to_primerFragmento"
+            app:destination="@id/primerFragmento" />
+        <action
+            android:id="@+id/action_tercerFragment_to_segundoFragment"
+            app:destination="@id/segundoFragment" />
     </fragment>
 </navigation>
